terraform/06-containers/kube-tmpl/01-proxy.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:

# kubernetes Service
- kind: Service
  apiVersion: v1
  metadata:
    name: rethinkdb-proxy
  spec:
    selector:
      app: rethinkdb-proxy
    ports:
    - protocol: TCP
      port: 28015
      targetPort: 28015

# kubernetes Deployment
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: rethinkdb-proxy
    labels:
      app: rethinkdb-proxy
  spec:
    replicas: 2
    template:
      metadata:
        labels:
          app: rethinkdb-proxy
      spec:
        containers:
        - name: rethinkdb-proxy
          image: ${rdb_proxy_img}
          imagePullPolicy: Always
          ports:
          - containerPort: 28015
