terraform/06-containers/kube-tmpl/03-app.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:

# kubernetes Ingress
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      certmanager.k8s.io/issuer: "letsencrypt-staging"
      certmanager.k8s.io/acme-challenge-type: "dns01"
      certmanager.k8s.io/acme-dns01-provider: "prod-dns"
    name: app
    namespace: default
  spec:
    tls:
    - hosts:
      - ${backend_domain}
      secretName: ${backend_domain}
    rules:
    - host: ${backend_domain}
      http:
        paths:
        - path: /
          backend:
            serviceName: app
            servicePort: 3000

# kubernetes Service
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: app
    name: app
  spec:
    type: ClusterIP
    ports:
      - port: 3000
        targetPort: 3000
    selector:
      app: app

# kubernetes Deployment
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: app
    name: app
  spec:
    replicas: 3
    template:
      metadata:
        labels:
          app: app
      spec:
        containers:
          - name: app
            image: ${backend_app_img}
            imagePullPolicy: Always
            ports:
              - containerPort: 3000
